name:                dazu
version:             0.1.0
synopsis:            Generate verifiably random passwords
description:
  See README.markdown
homepage:            https://budueba.com/dazu
license:             BSD2
license-file:        LICENSE
author:              Matvey Aksenov
maintainer:          matvey.aksenov@gmail.com
copyright:           2015-2022 Matvey Aksenov
category:            Network
build-type:          Custom
cabal-version:       >= 1.10
extra-source-files:
  README.markdown

source-repository head
  type:     git
  location: https://github.com/supki/da.git

custom-setup
  setup-depends:
      base
      >= 4.8 && < 5
    , Cabal
    , directory
    , filepath
    , process

executable dazu
  default-language:
    Haskell2010
  build-depends:
      aeson
    , base
      >= 4.8 && < 5
    , base64-bytestring
    , bytestring
    , cryptonite
    , envparse
    , http-client
    , http-client-tls
    , optparse-applicative
    , pem
    , text
    , x509
  hs-source-dirs:
    src
  main-is:
    Main.hs
  other-modules:
    Config
    TH
    Meta_dazu
  ghc-options:
    -Wall
    -Werror
