name:                damit
version:             0.1.0
synopsis:            Yet another command launcher
description:
  See README.markdown
homepage:            https://supki.github.io/damit
license:             BSD2
license-file:        LICENSE
author:              Matvey Aksenov
maintainer:          matvey.aksenov@gmail.com
category:            Development
build-type:          Simple
cabal-version:       >= 1.10
extra-source-files:
  README.markdown

source-repository head
  type:     git
  location: https://github.com/supki/damit.git

library
  default-language:
    Haskell2010
  build-depends:
      base         >= 4.7 && < 5
    , filepath
    , transformers
    , unix
  hs-source-dirs:
    lib
  exposed-modules:
    Damit
    Damit.Execute
    Damit.Execute.Internal
    Damit.Execute.Shell
    Damit.Execute.Tmux
    Damit.Route
    Damit.Route.Extra
  ghc-options:
    -Wall -Werror

test-suite spec
  type:
    exitcode-stdio-1.0
  default-language:
    Haskell2010
  build-depends:
      base  >= 4.7 && < 5
    , damit
    , hspec >= 2.1
  hs-source-dirs:
    test
  main-is:
    Spec.hs
  other-modules:
    Damit.Execute.InternalSpec
    Damit.Execute.TmuxSpec
  ghc-options:
    -Wall -Werror
