name:                dazu
version:             0.1.0
synopsis:            Generate verifiably random passwords
description:
  See README.markdown
homepage:            https://budueba.com/dazu
license:             BSD2
license-file:        LICENSE
author:              Matvey Aksenov
maintainer:          matvey.aksenov@gmail.com
copyright:           2015 Matvey Aksenov
category:            Network
build-type:          Simple
cabal-version:       >= 1.10
tested-with:         GHC == 7.10.1
extra-source-files:
  README.markdown

source-repository head
  type:     git
  location: https://github.com/supki/da.git

executable dazu
  default-language:
    Haskell2010
  build-depends:
      aeson                >= 0.8
    , base                 >= 4.8 && < 5
    , base64-bytestring    >= 1.0
    , bytestring
    , cryptonite           >= 0.7
    , envparse             >= 0.2
    , http-client          >= 0.4
    , http-client-tls      >= 0.2
    , optparse-applicative >= 0.11
    , pem                  >= 0.2
    , text
    , x509                 >= 1.5
  hs-source-dirs:
    src
  main-is:
    Main.hs
  other-modules:
    Config
    Paths_dazu
  ghc-options:
    -Wall
    -Werror
