name:                nix-freeze
version:             0.1.0
synopsis:            Freeze Nix environment into a Cabal constraints file
description:
  See README.markdown
homepage:            https://github.com/supki/da
license:             BSD2
license-file:        LICENSE
author:              Matvey Aksenov
maintainer:          matvey.aksenov@gmail.com
copyright:           2015 Matvey Aksenov
category:            System
build-type:          Simple
cabal-version:       >= 1.10
extra-source-files:
  README.markdown

executable nix-freeze
  default-language:
    Haskell2010
  build-depends:
      base >= 4.8 && < 5
    , Cabal
    , process
  hs-source-dirs:
    src
  main-is:
    Main.hs
